--- a/styles/media.css
+++ b/styles/media.css
@@ -88,8 +88,15 @@
     .study__greed-item6,
     .study__greed-item {
         padding: 0;
-        margin: 0;
+        margin: 0; 
         width: 100%;
+    }
+
+    .study__greed-item1 .study__item-flex .study__item-content{
+        margin-left: 25px;
+    }
+    .study__greed-item2 .study__item-flex .study__item-content{
+        margin-left: 17px;
     }
 
     .study__item-flex {
@@ -209,6 +216,13 @@
         margin: 25px auto 15px;
     }
 
+    .events__item-transition {
+        margin: 15px 50px 0 15px;
+    }
+    .admin__transition-back {
+        margin-right: 15px;
+    }
+
     .admin__content-icon {
         width: 68px;
         height: 68px;
@@ -260,6 +274,12 @@
         color: #1F1F22;
         font-size: 22px;
         margin-right: 21px;
+    }
+
+    .admin__events {
+        justify-content: center;
+        align-items: center;
+        
     }
 
     .admin__activity-mobile {
@@ -482,24 +502,19 @@
 
 }
 
-
-
 @media screen and (max-width: 768px) {
-    .study__item-name a {
+
+    .study__item-name {
         font-size: 25px;
     }
 
-    .study__greed-item2 .study__item-name a {
+    .study__greed-item2 .study__item-name {
         font-size: 21px;
     }
 
-    .study__greed-item3 .study__item-text a,
-    .study__greed-item4 .study__item-text a {
+    .study__greed-item3 .study__item-text,
+    .study__greed-item4 .study__item-text {
         font-size: 15px;
-    }
-
-    .study__greed-item7 .study__item-flex {
-        margin-top: 10px;
     }
 
     .admin__item-line {
@@ -552,7 +567,11 @@
 
 @media screen and (max-width: 320px) {
 
-    .study__greed-item2 .study__item-name a {
+    .study__item-content{
+        width: 50%;
+    }
+
+    .study__greed-item2 .study__item-name {
         font-size: 18px;
     }
 
@@ -560,31 +579,8 @@
         margin-left: 5px;
     }
 
-    .study__greed-item2 .study__item-icon {
-        margin-left: 5px;
-    }
-
-    .study__greed-item3 .study__item-icon {
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-    .study__greed-item3 .study__item-text a {
-        font-size: 13px;
-    }
-
-    .study__greed-item4 .study__item-icon {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-
     .study__percent-count {
         font-size: 35px;
-    }
-
-    .study__greed-item8 .study__item-icon {
-        margin-left: 5px;
-        margin-right: 10px;
     }
 
     .admin__content-icon {
