--- a/styles/style.css
+++ b/styles/style.css
@@ -31,8 +31,6 @@ a {
 
 .main {
     display: flex;
-    /* background-image: url(../images/Fon.jpg);
-    background-repeat: repeat; */
 }
 
 .sidebar {
@@ -43,6 +41,7 @@ a {
 
 .button {
     font-weight: 400;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 button:hover {
@@ -53,6 +52,8 @@ button:hover {
 
 .main__content {
     width: 100%;
+    background-image: url(../images/backdrop.jpg);
+    background-repeat: repeat;
 }
 
 .container {
@@ -86,13 +87,13 @@ button:hover {
     background-color: #FFFFFF;
     text-transform: uppercase;
     margin-right: 13px;
-    box-shadow: 2px 2px 5px 0px rgba(227, 184, 115, 0.30);
 }
 
 .menu__button-item:hover,
 .admin__button-white:hover,
 .admin__button-white6:hover {
     color: #FFFFFF;
+    background: #1F1F22;
 }
 
 .menu__button-red {
@@ -127,90 +128,83 @@ button:hover {
     min-height: 133px;
     border-radius: 10px;
     border: 1px solid var(--txt);
+    background-image: url(../images/backdrop.jpg);
+    transition: 0.5s;
+}
+
+.study__greed-item:hover,
+.teacher__greed-item:hover {
+    background-image: url(../images/backdrop.jpg);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .study__item-flex,
 .teacher__item-flex {
     display: flex;
-    margin-top: 30px;
+    justify-content: center;
 }
 
-.study__item-icon {
-    margin: 0 25px 0 17px;
+.study__greed-item1 .study__item-flex .study__item-content,
+.study__greed-item3 .study__item-flex .study__item-content{
+    margin-left: 25px;
+    margin-bottom: 10px;
+}
+
+.study__greed-item2 .study__item-flex .study__item-content{
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+.study__greed-item4 .study__item-flex{
+    justify-content: center;
+}
+.study__greed-item4 .study__item-flex .study__item-icon{
+    margin-right: 33px;
+}
+
+.study__greed-item5 .study__item-flex .study__item-content{
+    margin-right: 20px;
+}
+.study__greed-item6 .study__item-flex .study__item-content{
+    margin-right: 10px;
 }
 
 .study__item-content {
     text-align: left;
 }
 
-.study__item-name a {
+.study__item-name {
     color: var(--graphite-01);
     font-size: 32px;
 }
 
-.study__item-text a,
-.teacher__item-text a {
+.study__item-text,
+.teacher__item-text {
     color: #757575;
     font-size: 17px;
-    font-weight: 400;
 }
 
-.study__greed-item2 .study__item-name a {
+.study__greed-item2{
+    margin-right: 20px;
+}
+
+.study__greed-item2 .study__item-name {
     font-size: 26px;
-}
-
-.study__greed-item6,
-.study__greed-item2 {
-    margin-right: 25px;
-}
-
-.study__greed-item2 .study__item-content .study__item-name,
-.study__greed-item3 .study__item-content .study__item-name {
-    margin-bottom: 5px;
-}
-
-.study__greed-item2 .study__item-icon {
-    margin: 0 15px 0 10px;
-}
-
-
-.study__greed-item4 .study__item-icon {
-    margin: 0 30px 0 17px;
-}
-
-.study__greed-item5 .study__item-content,
-.study__greed-item6 .study__item-content {
-    margin-top: 5px;
 }
 
 .study__greed-item5 .study__item-flex,
 .study__greed-item6 .study__item-flex {
-    margin-top: 25px;
+    justify-content: space-around;
+    align-content: center;
 }
 
-.study__greed-item7 .study__item-icon {
-    margin: 0 8px 0 15px;
-}
-
-.study__greed-item7 .study__item-name a {
+.study__greed-item7 .study__item-name {
     font-size: 27px;
 }
 
-.study__greed-item7 .study__item-flex {
-    margin-top: 15px;
-}
-
 .study__greed-item7 .study__item-content {
-    margin-top: 17px;
-}
-
-.study__greed-item8 .study__item-icon {
-    margin: 0 15px;
-}
-
-.study__item-percent {
-    margin: 0 40px 0 27px;
-    text-align: center;
+    margin-top: 7px;
+    margin-left: 8px;
 }
 
 .study__percent-count {
@@ -261,10 +255,29 @@ button:hover {
 
 .admin__icon {
     margin-right: 36px;
+    fill: var(--graphite-01);
+    transition: 0.5s;
+}
+
+.admin__icon:hover {
+    cursor: pointer;
+    fill: var(--red);
+}
+
+.admin__icon1 {
+    width: 54px;
+    height: 45px;
+}
+
+.admin__icon2 {
+    width: 54px;
+    height: 54px;
 }
 
 .admin__icon3 {
     margin-right: 0;
+    width: 45px;
+    height: 45px;
 }
 
 .admin__content-info {
@@ -287,7 +300,7 @@ button:hover {
 .admin__mobile-transition,
 .admin__mobile-content,
 .news__mobile-time,
-.menu__mobile-button, 
+.menu__mobile-button,
 .mystudents__container-mobile,
 .events__teacher-none {
     display: none;
@@ -697,6 +710,10 @@ button:hover {
     grid-row-gap: 30px;
 }
 
+.teacher__greed-item .teacher__item-flex .teacher__item-content{
+    margin-right: 25px;
+}
+
 .teacher__greed-item3 {
     height: 532px;
     grid-row: 1/4;
@@ -711,13 +728,17 @@ button:hover {
     border: 1px solid var(--txt);
 }
 
+.teacher__greed-item5:hover{
+    box-shadow:none;
+}
+
 .teacher__content-info {
     display: flex;
     margin-top: 10px;
 }
 
 .teacher__info-name,
-.teacher__info-block{
+.teacher__info-block {
     display: flex;
 }
 
@@ -736,7 +757,7 @@ button:hover {
     margin-left: 12px;
 }
 
-.teacher__item-name a {
+.teacher__item-name {
     color: var(--graphite-01);
     font-size: 32px;
     font-weight: 500;
@@ -774,7 +795,7 @@ button:hover {
 }
 
 .teacher__icon3 {
-    margin: 15px 0 0 30px;
+    margin-top: 15px;
 }
 
 .mystudents {
@@ -851,6 +872,20 @@ button:hover {
 
 .mystudents__timetable-icon {
     margin-right: 16px;
+    width: 20px;
+    height: 20px;
+}
+
+.mystudents__timetable-title {
+    width: 40px;
+    height: 40px;
+    margin-right: 65px;
+}
+
+.mystudents__title-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .mystudents__button-group {
@@ -877,6 +912,7 @@ button:hover {
     border: 1px solid var(--txt);
     background: #FFF;
     color: var(--graphite-01);
+
 }
 
 .mystudents__button-white:hover {
@@ -973,6 +1009,6 @@ button:hover {
 }
 
 .information__test-mail {
-    padding-top: 30px;
-    padding-left: 35px;
+    margin-top: 30px;
+    margin-left: 35px;
 }
